<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:hapticFeedbackEnabled="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/rUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".25"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/offWhite"
        android:textColor="@color/midnightBlack"
        android:textColorHint="@color/midnightBlack"
        android:drawableLeft="@drawable/login_resized"
        android:drawablePadding="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/login_resized" />

    <EditText
        android:id="@+id/rPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rUsernameEditText"
        app:layout_constraintBottom_toTopOf="@id/rConfirmPasswordEditText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/offWhite"
        android:textColor="@color/midnightBlack"
        android:textColorHint="@color/midnightBlack"
        android:drawableLeft="@drawable/lock_resized"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:drawableStart="@drawable/lock_resized"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rConfirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rPasswordEditText"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/offWhite"
        android:textColor="@color/midnightBlack"
        android:textColorHint="@color/midnightBlack"
        android:drawableStart="@drawable/lock_resized"
        android:drawableLeft="@drawable/lock_resized"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPersonName|textPassword"
         />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rConfirmPasswordEditText"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/offWhite"
        android:textColor="@color/midnightBlack"
        android:textColorHint="@color/midnightBlack"
        android:drawableLeft="@drawable/email_resized"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            android:layout_marginTop="24dp"
            android:alpha="1"
            android:background="@drawable/rounded_ombre_red"
            android:ellipsize="start"
            android:onClick="registerClick"
            android:text="@string/register"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rAskRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".42"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            android:layout_marginTop="32dp"
            android:text="@string/already_registered"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/rLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/rAskRegisterTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".05"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            android:layout_marginTop="32dp"
            android:ellipsize="none"
            android:focusable="true"
            android:text="@string/login"
            android:textColor="@color/crimsonRed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/alertTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rAskRegisterTextView"
            app:layout_constraintVertical_bias="0.2"
            android:visibility="invisible"/>

    <!--    <EditText-->
<!--        android:id="@+id/rUsernameEditText"-->
<!--        android:layout_width="398dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintVertical_bias=".3"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColor="#FFF"-->
<!--        android:hint="Username"-->
<!--        android:drawableLeft="@drawable/login_resized"-->
<!--        android:drawablePadding="10dp"/>-->

<!--    <EditText-->
<!--        android:id="@+id/rPasswordEditText"-->
<!--        android:layout_width="398dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/rUsernameEditText"-->
<!--        app:layout_constraintBottom_toTopOf="@id/rConfirmPasswordEditText"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:inputType="textPersonName|textPassword"-->
<!--        android:textColor="#FFF"-->
<!--        android:hint="Password?"-->
<!--        android:drawableLeft="@drawable/lock_resized"-->
<!--        android:drawablePadding="10dp"/>-->

<!--    <EditText-->
<!--        android:id="@+id/rConfirmPasswordEditText"-->
<!--        android:layout_width="398dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/rPasswordEditText"-->
<!--        app:layout_constraintBottom_toTopOf="@id/emailEditText"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:inputType="textPersonName|textPassword"-->
<!--        android:textColor="#FFF"-->
<!--        android:hint="Confirm Password"-->
<!--        android:drawableLeft="@drawable/lock_resized"-->
<!--        android:drawablePadding="10dp"/>-->

<!--    <EditText-->
<!--        android:id="@+id/emailEditText"-->
<!--        android:layout_width="398dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/rConfirmPasswordEditText"-->
<!--        app:layout_constraintBottom_toTopOf="@id/registerButton"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColor="#FFF"-->
<!--        android:hint="E-mail"-->
<!--        android:drawableLeft="@drawable/email_resized"-->
<!--        android:drawablePadding="10dp" />-->

<!--    <Button-->
<!--        android:id="@+id/registerButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="15dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/emailEditText"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintVertical_bias=".4"-->
<!--        android:alpha="1"-->
<!--        android:background="@drawable/rounded_ombre_red"-->
<!--        android:ellipsize="start"-->
<!--        android:onClick="registerClick"-->
<!--        android:text="@string/register"-->
<!--        android:textSize="18sp" />-->

<!--    <TextView-->
<!--        android:id="@+id/rAskRegisterTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias=".35"-->
<!--        app:layout_constraintTop_toBottomOf="@id/registerButton"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintVertical_bias=".2"-->
<!--        android:text="Already registered?"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColor="#CFF"-->
<!--        android:textSize="20sp"/>-->

<!--    <TextView-->
<!--        android:id="@+id/rLoginTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/rAskRegisterTextView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias=".1"-->
<!--        app:layout_constraintTop_toBottomOf="@id/registerButton"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintVertical_bias=".2"-->
<!--        android:text="LOGIN"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColor="#F00"-->
<!--        android:textSize="20sp"/>-->

<!--    <TextView-->
<!--        android:id="@+id/alertTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text=""-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/rAskRegisterTextView"-->
<!--        app:layout_constraintVertical_bias="0.2"-->
<!--        android:visibility="invisible"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>